--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/admin.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/admin.html.twig
@@ -29,6 +29,8 @@
     Tecnotek.UI.vars["periodId"] = {{ entity.id }};
     Tecnotek.UI.vars["groupId"] = 0;
 
+    Tecnotek.UI.urls["getStudentsURL"] = "{{ path("_expediente_get_students_list_of_group") }}";
+
     $(function() {
         $("#openGroupForm").fancybox({
             'afterLoad' : function(){
@@ -47,6 +49,14 @@
             'beforeLoad' : function(){
 
             }
+        });
+
+        $("#openStudentsToGroup").fancybox({
+            'beforeLoad' : function(){
+
+            },
+            'modal': true,
+            'width': 650
         });
     });
 </script>
@@ -125,6 +135,32 @@
                                         <div class="left"><input class="btn" style="margin-top: 0px; margin-left: 25px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
                                         <div class="clear"></div>
                                     </form>
+                                </div>
+
+                                <!-- hidden studentsToGroup form -->
+                                <div id="studentsToGroupContainer" style="display: none; width: 800px;">
+                                    <h2 style="margin-bottom: 0px;">Estudiantes en el grupo</h2>
+                                    <a id="openStudentsToGroup" class="modalbox" href="#studentsToGroupContainer">&nbsp;</a>
+
+                                    <div class="left" id="studentsList">
+                                        <div class="row tableHeader">
+                                            <div class="option_width" style="float: left; width: 300px;">{% trans %}label.name{% endtrans %}</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="left" style="margin-left: 50px;">
+                                        <form id="searchform">
+                                            <div>
+                                                <div>{% trans %}club.include.students{%endtrans%}</div>
+                                                <div style="font-size: 10px;">{% trans %}club.include.help{%endtrans%}</div>
+
+                                                <input type="text" size="30" value="" id="searchBox"/>
+                                            </div>
+                                            <div id="suggestions"></div>
+                                        </form>
+                                    </div>
+                                    <div class="clear"></div>
+
                                 </div>
                             </section>
 
