--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -6,6 +6,36 @@
 
 {% block extracss %}
 <link rel="stylesheet" href="{{ asset('fancybox/jquery.fancybox.css') }}" type="text/css" media="all" />
+<style>
+    .itemCarne{ background-color: #82c0fd; width: 75px; color: #000; float: left; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; }
+    .itemEstudiante{ background-color: #A4D2FD; color: #000; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 146px; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
+
+    .qualificationTable{ /*margin-top: 75px;*/ margin-bottom: 50px;}
+    .qualificationTable .itemNota{ background-color: #A4D2FD; }
+    .qualificationTable .itemPromedio{ background-color: #5F96E7; }
+    .qualificationTable .itemPorcentage{ background-color: #B698EE; }
+    .qualificationTable .itemPromedioPeriodo{ background-color: #2b34ee; color: #fff; font-weight: bold;}
+    .qualificationTable .itemHeader {font-weight: bold; color: #000;
+        position: absolute;
+        text-align: center; float: left; width: 150px; height: 32px; line-height: 32px; vertical-align: middle;
+        border: solid thin black; top: 60px;
+        -moz-transform: rotate(90deg);  /* FF3.5+ */
+        -o-transform: rotate(90deg);  /* Opera 10.5 */
+        -webkit-transform: rotate(90deg);  /* Saf3.1+, Chrome */
+        filter:  progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90);  /* IE6,IE7 */
+        -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90)"; /* IE8 */
+    }
+    .itemHeaderCode {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
+
+    .qualificationTable .itemHeader2 {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black;}
+
+    .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 18px; height: 11px; line-height: 11px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; font-size: 10px;}
+</style>
 {% endblock %}
 
 {% block extrajs %}
@@ -13,10 +43,10 @@
 
 <script type="text/javascript">
     Tecnotek.UI.translates["confirmDelete"] = "{% trans %}messages.confirmation.period.delete{% endtrans %}";
-    Tecnotek.module = "courseEntries";
+    Tecnotek.module = "qualifications";
     Tecnotek.UI.urls["loadGroupsOfPeriodURL"] = "{{ path("_expediente_teacher_load_groups_of_period") }}";
     Tecnotek.UI.urls["loadCoursesOfGroupByTeacherURL"] = "{{ path("_expediente_teacher_load_courses_of_group_by_teacher") }}";
-    Tecnotek.UI.urls["loadEntriesByCourseURL"] = "{{ path("_expediente_teacher_load_entries_by_course") }}";
+    Tecnotek.UI.urls["loadQualificationsOfGroupURL"] = "{{ path("_expediente_teacher_load_group_qualifications") }}";
     Tecnotek.UI.urls["createEntryURL"] = "{{ path("_expediente_teacher_create_subentry") }}";
 
 
@@ -80,11 +110,40 @@
 
                         <div class="clear"></div>
                     </div>
-                    <!-- Tabs -->
-                    <div id="tabs" style="height: 600px">
-
+                    <!-- Qualifications -->
+                    <div>
+                        <div class="left">
+                            <h1>{% trans %}label.qualifications{% endtrans %}</h1>
+                        </div>
+                        <div class="left" style="line-height: 48px; margin-left: 25px;">
+                            <span>Ingrese o verifique la informacion de las notas de los estudiantes por grupo</span>
+                        </div>
+                        <div class="clear"></div>
                     </div>
-                    <!-- End Tabs -->
+                    <div class="clear"></div>
+
+                    <div id="tableContainer" name="tableContainer" style="display: none;">
+                        <div class="left" style="width: 225px; background-color: #d2b48c; position: relative; height: 286px;">
+                            <div class="itemCarne">Periodo</div><div class="itemEstudiante">Curso</div><div class="clear"></div>
+
+                            <div class="itemCarne" style="height: 150px; line-height: 150px;"></div><div class="itemEstudiante"  style="height: 150px; line-height: 150px;">02-A</div><div class="clear"></div>
+
+                            <div class="itemCarne">CARNE</div><div class="itemEstudiante">NOMBRE DEL ESTUDIANTE</div><div class="clear"></div>
+
+                            <div  name="studentsHeader" id="studentsHeader"></div>
+                        </div>
+                        <div class="left qualificationTable" style="position: relative;">
+                            <div  name="contentBody" id="contentBody"></div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+
+
+                    <br /><br /> <br /><br /> <br /><br />
+                    <br /><br /><br /><br />
+
+                    <!-- End Qualifications -->
                 </div>
             </div>    
         </div>        
